@@ -671,6 +671,14 @@ FEATURE_DEFINES += ENABLE_IFRAME_SEAMLESS=1
 webcore_cppflags += -DENABLE_IFRAME_SEAMLESS=1
 endif  # END ENABLE_IFRAME_SEAMLESS
 
+# ---
+# CSS3 Flexbox support
+# ---
+if ENABLE_CSS3_FLEXBOX
+FEATURE_DEFINES += ENABLE_CSS3_FLEXBOX=1
+webcore_cppflags += -DENABLE_CSS3_FLEXBOX=1
+endif  # END ENABLE_CSS3_FLEXBOX
+
 DerivedSources/WebCore/CSSPropertyNames.cpp: DerivedSources/WebCore/CSSPropertyNames.h
 DerivedSources/WebCore/CSSPropertyNames.h: $(WEBCORE_CSS_PROPERTY_NAMES) $(WebCore)/css/makeprop.pl
 	$(AM_V_GEN)
